# apis-api

./: .env-example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 24e653c65e15_auth_google_complete.py  8b2239691a50_google_auth.py  ced5b437a211_att_tables.py  e8b5499e065e_role_default.py  f54e28257d79_db.py
app/: main.py
app/api/: dependencies.py
app/api/libs/: mails.py  redis.py  supabase.py
app/api/routes/: admin.py  auth.py  notifications.py  task.py  user.py
app/core/: config.py  database.py  security.py
app/crud/: tasks.py  users.py
app/models/: task.py  user.py
app/schemas/: task.py  user.py
app/templates/: mail.html  signin-mail.html
tests/: test_app.py
