[tool.poetry]
name = "app"
version = "1.0.0"
readme = "README.md"
authors = ["afiovinicius <afiovinicius@gmail.com>"]
homepage = "https://apis.vicit.studio"
repository = "https://github.com/afiovinicius/apis-api/tree/develop"
documentation = "https://apis-api.onrender.com/redoc"
description = "API REST da Apis. Um webapp de produtividade que permite controle colaborativo das suas atividades e colegas."

[tool.poetry.dependencies]
python = "^3.11.9" # Versão usada no ambiente de webservice do render
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
gunicorn = "^22.0.0"
fastapi-mail = "^1.4.1"
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.1"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
supabase = "^2.5.0"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
bcrypt = "^4.1.3"
redis = {extras = ["hiredis"], version = "^5.0.6"}
redis-cli = "^1.0.1"
aioredis = "^2.0.1"
jinja2 = "^3.1.4"
ignr = "^2.2"
asyncio = "^3.4.3"
distutils-extra-python = "^2.39.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
taskipy = "^1.12.2"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
